--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -14,7 +14,7 @@
     <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">失物</view>
     <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">寻物</view>
   </view>
- 
+
   <swiper current="{{currentTab}}" duration="300" bindchange="swiperTab">
     <swiper-item>
       <view wx:for="{{info.details}}" class="basic" wx:key="key">
@@ -30,6 +30,6 @@
   </swiper>
   <view class="bottom">
     <image class="homeicon" src="../../img2/Icons-Tab_home_d.png"></image>
-    <image class="personicon" src="../../img2/Icons-Tab_profile_d.png"></image>
+    <image class="personicon" src="../../img2/Icons-Tab_profile_d.png" bindtap="dispath"></image>
   </view>
 </view>
